Various changes preparing packages for RC0: - Verify and update package version numbers as needed - Implement versioning scheme - Change bug address to point to bugzilla bug entry form - Disable loadable i18n in libX11 by default (use --enable-loadable-i18n to     reenable it) - Fix makedepend to use pkgconfig and pass distcheck - Update build script to build macros first - Update modular Xorg version

--- a/configure.ac
+++ b/configure.ac
@@ -1,11 +1,13 @@
 # $XdotOrg: $
 
 AC_PREREQ([2.57])
-AC_INIT(xbitmaps, [1.0], [xorg@lists.freedesktop.org], xbitmaps)
+AC_INIT(xbitmaps, [0.99.0], [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg], xbitmaps)
 AM_INIT_AUTOMAKE([dist-bzip2])
 AM_MAINTAINER_MODE
 
 AM_CONFIG_HEADER(config.h)
+
+XORG_RELEASE_VERSION
 
 AC_OUTPUT([
 	Makefile
