--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
+Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
+config.h
 config.h.in
+config.log
+config.status
 configure
 install-sh
 missing
+stamp-h1
 *~
+xbitmaps-*.tar.*
+xbitmaps.pc
+ChangeLog
+tags
