--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,15 @@
+dnl Process this file with autoconf to create configure.
+
+# Initialize Autoconf
 AC_PREREQ([2.60])
-AC_INIT(xbitmaps, [1.1.0], [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg], xbitmaps)
+AC_INIT([xbitmaps], [1.1.0],
+        [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg], [xbitmaps])
+AC_CONFIG_SRCDIR([Makefile.am])
+AC_CONFIG_HEADERS([config.h])
+
+# Initialize Automake
 AM_INIT_AUTOMAKE([foreign dist-bzip2])
 AM_MAINTAINER_MODE
-
-AM_CONFIG_HEADER(config.h)
 
 # Require xorg-macros 1.3 or later: XORG_DEFAULT_OPTIONS
 m4_ifndef([XORG_MACROS_VERSION],
