Install xbitmaps.pc to $(datadir)/pkgconfig instead of $(libdir)
The xbitmaps package consists entirely of X bitmap data files, which
are platform-independent text files containing a C language format
representation of the encoded bitmap image, which are installed to
$(includedir)/X11/bitmaps so that programs can #include them into
their sources at build time.

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
Acked-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-pkgconfigdir = $(libdir)/pkgconfig
+pkgconfigdir = $(datadir)/pkgconfig
 pkgconfig_DATA = xbitmaps.pc
 
 MAINTAINERCLEANFILES = ChangeLog INSTALL
