--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ dnl Process this file with autoconf to create configure.
 # Initialize Autoconf
 AC_PREREQ([2.60])
 AC_INIT([xbitmaps], [1.1.2],
-        [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg], [xbitmaps])
+        [https://gitlab.freedesktop.org/xorg/data/bitmaps/issues], [xbitmaps])
 AC_CONFIG_SRCDIR([Makefile.am])
 AC_CONFIG_HEADERS([config.h])
 
